校验OK：使用spring的form标签

--- a/jiulou/jiulou-web/src/main/resources/users.ini
+++ b/jiulou/jiulou-web/src/main/resources/users.ini
@@ -1,6 +1,7 @@
 [users]
 # format: username = password, role1, role2, ..., roleN
 root = secret,admin
+admin = admin,admin
 guest = guest,guest
 presidentskroob = 12345,president
 darkhelmet = ludicrousspeed,darklord,schwartz
